@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/libvirt-1.0.4.ebuild,v 1.1 2013/04/04 18:14:18 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/libvirt-1.0.4.ebuild,v 1.2 2013/05/10 05:06:04 cardoe Exp $
 
 EAPI=5
 
@@ -161,8 +161,9 @@ pkg_setup() {
 
 	# Handle specific kernel versions for different features
 	kernel_is lt 3 5 && LXC_CONFIG_CHECK+=" ~USER_NS"
-	kernel_is lt 3 6 && LXC_CONFIG_CHECK+=" ~CGROUP_MEM_RES_CTLR" || \
-						LXC_CONFIG_CHECK+=" ~MEMCG"
+	kernel_is lt 3 6 && LXC_CONFIG_CHECK+=" ~CGROUP_MEM_RES_CTLR"
+	kernel_is ge 3 6 &&	LXC_CONFIG_CHECK+=" ~MEMCG ~MEMCG_SWAP"
+	kernel_is ge 3 8 && LXC_CONFIG_CHECK+=" ~USER_NS"
 
 	CONFIG_CHECK=""
 	use fuse && CONFIG_CHECK+=" ~FUSE_FS"
